# hpc_ode

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyJac_mechanism_generator.sh  requirements.txt
E2Etests/100/: results_GPU100.csv  results_openmp100.csv  test_results.py
GPU/: CMakeLists.txt  README.md
GPU/app_magma/: CMakeLists.txt  cvode_user.cu  cvode_user.cuh  main.cu  testing.cpp  testing.hpp  unittesting.cpp  unittesting.hpp  utils.cpp
GPU/app_magma_diff_jac/: CMakeLists.txt  main.cu  utils.cpp
GPU/gri_cuda/: mechanism.cuh
GPU/gri_cuda/jacobs/: jacob_0.cu  jacob_1.cu  jacob_10.cu  jacob_2.cu  jacob_3.cu  jacob_4.cu  jacob_6.cu  jacob_7.cu  jacob_8.cuh
GPU/libpyjacGPU/: CMakeLists.txt  mechanism.cu  sparse_multiplier.cuh  spec_rates.cu
GPU/libpyjacGPU/jacobs/: jac_include.cuh  jacob_10.cuh
GPU/libpyjacGPU/rates/: rate_list_cuda
GPU/libutils/: CMakeLists.txt  utils.hpp
GPU2/app_magma_v2/: cvode_user.cu  main.cu
GPU2/libpyjacGPU_modified/: gpu_memory.cu  sparse_multiplier.cu
GPU2/libpyjacGPU_modified/jacobs/: jacob_6.cuh  jacob_7.cu  jacob_8.cu
GPU2/libpyjacGPU_modified/rates/: rxn_rates_0.cuh  rxn_rates_1.cu
Level_1/: README.md  serial.cpp
Level_1/OpenMP/: Makefile  README.md  main.cpp  mec_launch.sh  performance_analysis.ipynb  report_time.csv  utils.hpp
Level_1/OpenMP/mechanisms_performance_analysis/: mechanisms_analysis.ipynb  package_report.csv
Level_1/OpenMP/results/: package_results_16_threads.csv  schedule_study.csv
Level_2/: CMakeLists.txt  README.md  cvodes_dydt.c  cvodes_dydt.h  cvodes_jac.c  cvodes_jac.h  main.cpp  profiling_serial.txt  writeLibrary.py
Level_2/app_openmp/: main.cpp
Level_2/app_serial/: main.cpp
Level_2/app_serial_enhanced/: CMakeLists.txt  cvode_user.cpp  main.cpp
Level_2/libpyjac/jacobs/: jacob_3.c  jacob_8.c  jacob_9.c
Level_2_test/: CMakeLists.txt  writeLibrary.py
Level_2_test/app_serial/: CMakeLists.txt
Level_2_test/app_serial_enhanced/: cvode_user.cpp  cvode_user.hpp  main.cpp
Level_2_test/libpyjac/: mechanism.c  mechanism.h  rxn_rates.c
Level_2_test/libpyjac/jacobs/: jacob_6.c
app/: .env  CMakeLists.txt  GUI_configuration.py  common.py  config.yaml  configUI.py  constants.py  database.py  main.cpp  main.py  runtime_variables.py
include/ODEIntegrator/: ODEIntegratorFactory.hpp  ODEIntegratorHeader.hpp
include/ODEIntegrator/Context/: Context.hpp  OutFileService.hpp
include/ODEIntegrator/Integrators/: CVodeCPUDataModels.hpp  CVodeDataModels.hpp  CVodeGPUDataModels.hpp  CVodeIntegrator.hpp  CVodeIntegratorGPU.hpp  CVodeIntegratorOMP.hpp  CanteraIntegrator.hpp  Integrator.hpp  MechanismDriver.hpp  MechanismInterface.hpp
include/ODEIntegrator/Logger/: BaseLogger.hpp  (+4 more)
old/GPU/: CMakeLists.txt  README.md
old/GPU/app_magma/: cvode_user.cu  cvode_user.cuh
old/GPU/app_magma_diff_jac/: CMakeLists.txt  cvode_user.cu  cvode_user.cuh
old/GPU/libpyjacGPU/: chem_utils.cu  dydt.cu  gpu_macros.cuh  header.cuh  rxn_rates_pres_mod.cu
old/GPU/libpyjacGPU/jacobs/: jac_list_cuda  jacob_4.cuh  jacob_5.cu  jacob_5.cuh  jacob_7.cuh  jacob_9.cu
old/GPU/libutils/: utils.cpp  utils.hpp
old/GPU2/: CMakeLists.txt  README.md
old/GPU2/libpyjacGPU_modified/: CMakeLists.txt  gpu_macros.cuh  jacob.cu  mechanism.cuh  rxn_rates.cu
old/GPU2/libpyjacGPU_modified/jacobs/: jacob_0.cu  jacob_1.cu  jacob_10.cu  jacob_2.cu  jacob_2.cuh  jacob_3.cu  jacob_4.cu  jacob_5.cu  jacob_6.cu  jacob_9.cu
old/GPU2/libpyjacGPU_modified/rates/: rxn_rates_0.cu  rxn_rates_1.cuh
old/Level_1/: Makefile  README.md
old/Level_2/app_openmp/: CMakeLists.txt  cvode_user.cpp  main.cpp  utils.cpp  utils.hpp
old/Level_2/app_serial/: CMakeLists.txt
old/Level_2/libpyjac/: CMakeLists.txt  dydt.c  spec_rates.c
old/Level_2/libpyjac/jacobs/: jacob_7.c
package_installation_scripts/: install_cantera.sh  install_cmake_magma.sh  install_fftw.sh  install_sundials.sh
ref_data/: .gitignore  README.md  generate.py  read.cpp  res_gri_100.csv  res_gri_32.csv  res_h2.csv
resources/mechanisms/: ESTiMatE-Mech_04042022.xml  h2_li_2004.xml
src/: CMakeLists.txt
src/InputOutput/: Reader.h
src/InputOutput/Reader/: CMakeLists.txt  Reader.hpp  csvReader.cpp  csvReader.hpp  testCsvReader.cpp
src/InputOutput/Reader/include/Reader/: csvReader.hpp
src/InputOutput/Writer/: CMakeLists.txt  csvWriter.cpp
src/Integrators/: CMakeLists.txt  CVodeIntegrator.cpp  CVodeIntegratorGPU.cpp  CVodeIntegratorOMP.cpp  CanteraIntegrator.cpp  CanteraIntegratorOMP.cpp  Integrator.cpp  OpenMPRuntime.cpp  OpenMPRuntime.hpp
src/Integrators/Drivers/: CVodeGPUDriver.cu  CVodeSerialDriver.cpp
src/LibraryFactory/: todo.cpp
src/Logger/: BaseLogger.cpp  CMakeLists.txt  Logger.cpp  ThreadSafeQueue.cpp
src/Mechanism/: CMakeLists.txt
src/Mechanism/CPU/: mass_mole.c  rxn_rates_pres_mod.c
src/Mechanism/CPU/jacobs/: jacob_4.c
src/Mechanism/GPU/: mass_mole.cu  mechanism.cuh  rxn_rates_pres_mod.cu  spec_rates.cu
src/Mechanism/GPU/jacobs/: jacob_0.cu  jacob_1.cu  jacob_1.cuh  jacob_2.cu  jacob_3.cu  jacob_4.cu  jacob_5.cu  jacob_6.cu  jacob_7.cu  jacob_8.cu  jacob_9.cuh
src/Mechanism/GPU/rates/: rates_include.cuh  rxn_rates_0.cu  rxn_rates_1.cu
src/Mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h  Mesh.hpp  Point.cpp  Point.hpp  PointBuilder.cpp  PointBuilder.hpp  System.cpp  System.h  SystemBuilder.cpp  SystemBuilder.h  testMesh.cpp  testPoint.cpp  testSystem.cpp
src/Timer/: CMakeLists.txt  Timer.cpp  Timer.hpp  testTimer.cpp
test/: test_results.py
tests/: CMakeLists.txt
tests/InputOutput/Reader/: CMakeLists.txt  testCsvReader.cpp
tests/InputOutput/Reader/data/: dummy.txt  file_without_temperature.csv
tests/InputOutput/Writer/: CMakeLists.txt  testCsvWriter.cpp
tests/InputOutput/Writer/data/: res_gri_10.csv
tests/Integrators/: CMakeLists.txt  testCVodeIntegrator.cpp  testCVodeIntegratorGPU.cpp  testCanteraIntegrator.cpp
tests/Integrators/data/: h2o2.csv  res_gri_1.csv
tests/Logger/: CMakeLists.txt  testLogger.cpp
tests/Mesh/: CMakeLists.txt  testMesh.cpp  testPoint.cpp
tests/Timer/: CMakeLists.txt  testTimer.cpp
(+28 files in other folders)
